crates/wac-parser/tests/resolution/fail/mismatched-list-element.wac
package test:comp;

import x: interface {
    f: func(l: list<string>);
};

let i = new foo:bar { x };
